{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 237,
  "lineage": "e9005a69-f7f6-e2cd-797c-be149455675c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffff407270ecf417",
            "arn": "arn:aws:ec2:us-east-1:084375555299:elastic-ip/eipalloc-0ffff407270ecf417",
            "domain": "vpc",
            "id": "eipalloc-0ffff407270ecf417",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-210-63-107.compute-1.amazonaws.com",
            "public_ip": "3.210.63.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ninhnh-vti-nat-eip"
            },
            "tags_all": {
              "Name": "ninhnh-vti-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e3c4a339a264cc9",
            "arn": "arn:aws:ec2:us-east-1:084375555299:instance/i-09dc0334717a68e83",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09dc0334717a68e83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ninhnh-vti-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cab76a012fe2c450",
            "private_dns": "ip-10-0-0-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.217",
            "public_dns": "ec2-54-167-99-101.compute-1.amazonaws.com",
            "public_ip": "54.167.99.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b39b91a2f04b83d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097c8768d9f2e6cdd",
            "tags": {
              "Name": "ninhnh-vti-jenkins-instance"
            },
            "tags_all": {
              "Name": "ninhnh-vti-jenkins-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc82574494c8682d"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:internet-gateway/igw-091af1ba847bedf42",
            "id": "igw-091af1ba847bedf42",
            "owner_id": "084375555299",
            "tags": {
              "Name": "ninhnh-vti-internet-gateway"
            },
            "tags_all": {
              "Name": "ninhnh-vti-internet-gateway"
            },
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffff407270ecf417",
            "association_id": "eipassoc-0472bb671b9153c0d",
            "connectivity_type": "public",
            "id": "nat-0e280c22d46d5c6ef",
            "network_interface_id": "eni-0661d6da0be6d4084",
            "private_ip": "10.0.0.232",
            "public_ip": "3.210.63.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-097c8768d9f2e6cdd",
            "tags": {
              "Name": "ninhnh-vti-nat-gateway"
            },
            "tags_all": {
              "Name": "ninhnh-vti-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:route-table/rtb-023274ae7df08f798",
            "id": "rtb-023274ae7df08f798",
            "owner_id": "084375555299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e280c22d46d5c6ef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:route-table/rtb-0fb081f012d0ceab9",
            "id": "rtb-0fb081f012d0ceab9",
            "owner_id": "084375555299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091af1ba847bedf42",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa109d2a57d962b5",
            "route_table_id": "rtb-023274ae7df08f798",
            "subnet_id": "subnet-02a7f039201a3f969"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8308b3190f2bd67",
            "route_table_id": "rtb-023274ae7df08f798",
            "subnet_id": "subnet-037a153cf51d03120"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a871c40cbc46c288",
            "route_table_id": "rtb-0fb081f012d0ceab9",
            "subnet_id": "subnet-097c8768d9f2e6cdd"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bc515af9bf919bd",
            "route_table_id": "rtb-0fb081f012d0ceab9",
            "subnet_id": "subnet-055660945d0607ddb"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:security-group/sg-0ec803373d3143cf9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec803373d3143cf9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20241024033938819700000001",
            "name_prefix": "terraform-",
            "owner_id": "084375555299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgres_security_group"
            },
            "tags_all": {
              "Name": "postgres_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:security-group/sg-0cc82574494c8682d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc82574494c8682d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20241024113456312700000001",
            "name_prefix": "terraform-",
            "owner_id": "084375555299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ninhnh-vti-jenkins-sg"
            },
            "tags_all": {
              "Name": "ninhnh-vti-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:subnet/subnet-02a7f039201a3f969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7f039201a3f969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninhnh-vti-private-subnet-0"
            },
            "tags_all": {
              "Name": "ninhnh-vti-private-subnet-0"
            },
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:subnet/subnet-037a153cf51d03120",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037a153cf51d03120",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninhnh-vti-private-subnet-1"
            },
            "tags_all": {
              "Name": "ninhnh-vti-private-subnet-1"
            },
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:subnet/subnet-097c8768d9f2e6cdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097c8768d9f2e6cdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninhnh-vti-public-subnet-0"
            },
            "tags_all": {
              "Name": "ninhnh-vti-public-subnet-0"
            },
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:subnet/subnet-055660945d0607ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055660945d0607ddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninhnh-vti-public-subnet-1"
            },
            "tags_all": {
              "Name": "ninhnh-vti-public-subnet-1"
            },
            "vpc_id": "vpc-04648d57b700f92bb"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375555299:vpc/vpc-04648d57b700f92bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079feac10afb0b386",
            "default_route_table_id": "rtb-00a5ea3e8f41a8131",
            "default_security_group_id": "sg-0d22bc2ba68e2453a",
            "dhcp_options_id": "dopt-0063d84fb3540108d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04648d57b700f92bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a5ea3e8f41a8131",
            "owner_id": "084375555299",
            "tags": {
              "Name": "ninhnh-vti-vpc"
            },
            "tags_all": {
              "Name": "ninhnh-vti-vpc"
            }
          }
        }
      ]
    }
  ]
}